Remove extra transition on svg to fix dancing letters on Safari.

--- a/styles/components/elements/Button.module.scss
+++ b/styles/components/elements/Button.module.scss
@@ -3,18 +3,13 @@
 	@apply rounded-full;
 	@apply bg-red-600 border-2 border-red-600 hover:bg-white;
 	@apply text-white hover:text-red-600 text-xs font-semibold uppercase;
-	@apply transition ease-in-out duration-200;
+	@apply transition-colors ease-in-out duration-200;
 
 	svg {
 		@apply inline w-4;
 		@apply align-text-bottom;
 		@apply stroke-3;
-		@apply transition ease-in-out duration-200;
 
 		height: 18px;
-	}
-
-	&:hover svg {
-		@apply transform translate-x-0.5;
 	}
 }
